tests/scripts/type_errors/undefined_variable.roto
fn foo() {
	let a = b;
}
